[package]
name = "tplsrv"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtmpl = "0.7.1"
structopt = "0.3.26"
actix-web = "4.1.0"
tokio = { version = "1.19.2", features = ["fs"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
